First add DbContext

--- a/SPHSS/SPHSS_Controller/appsettings.json
+++ b/SPHSS/SPHSS_Controller/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=(local); Database=SPHSS; Uid=sa; Pwd=12345;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "SecretKey": "SPHSS_SECRETKEY_SIEUCAPBAOMAT_VAYMACHUADU16KYTU",
+    "Issuer": "SPHSS_Issuer",
+    "Audience": "SPHSS_Audience"
+  }
 }
