--- a/SPHSS/SPHSS_Controller/appsettings.json
+++ b/SPHSS/SPHSS_Controller/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=(local); Database=SPHSS; Uid=sa; Pwd=12345;TrustServerCertificate=True"
+    "DefaultConnectionString": "Server=MHOANG\\MINHHOANG; Database=SPHSS; Uid=sa; Pwd=12345;TrustServerCertificate=True"
   },
   "Jwt": {
     "SecretKey": "SPHSS_SECRETKEY_SIEUCAPBAOMAT_VAYMACHUADU16KYTU",
