move some zoom access key to appsettings for security

--- a/SPHSS/SPHSS_Controller/appsettings.json
+++ b/SPHSS/SPHSS_Controller/appsettings.json
@@ -13,5 +13,10 @@
     "SecretKey": "SPHSS_SECRETKEY_SIEUCAPBAOMAT_VAYMACHUADU16KYTU",
     "Issuer": "SPHSS_Issuer",
     "Audience": "SPHSS_Audience"
+  },
+  "ZoomService": {
+    "ClientId": "QVsE_mlrQ8GCJS_PxVtmcg",
+    "ClientSecret": "X90kcFaL64z7GJPhiA8HhMVRPF4Rpbi4",
+    "AccountId": "wrcDrlfCRBOQkSDB0VEoVw"
   }
 }
