Send mail after delete Program

--- a/SPHSS/SPHSS_Controller/appsettings.json
+++ b/SPHSS/SPHSS_Controller/appsettings.json
@@ -18,5 +18,9 @@
     "ClientId": "QVsE_mlrQ8GCJS_PxVtmcg",
     "ClientSecret": "X90kcFaL64z7GJPhiA8HhMVRPF4Rpbi4",
     "AccountId": "wrcDrlfCRBOQkSDB0VEoVw"
+  },
+  "SendMailService": {
+    "AdminEmail": "hoangtmse151422@fpt.edu.vn",
+    "AppPassword": "tcgp fdut pbwp vkgh"
   }
 }
